Buggy yet somewhat there layout using bootstrap

--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,6 +1,2 @@
 <h1>Goals</h1>
-<% @goals.each do |goal| %>
-    <p>
-        <% link_to(goal.title, target: "_blank") %> - <%= link_to("Show Page", goal) %>
-    </p>
-<% end %>
+<%= render 'goalbox' %>
