--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= link_to(@goal.title, target: "_blank")%><i class="fa fa-star"></i> <br/></h1>
+<h1><%= link_to(@goal.title, target: "_blank")%> <i class="glyphicon glyphicon-star-empty" style="font-size: 2.75rem;"></i> <br/></h1>
 
 <div class = "timeline-wrapper">
   <h3>Milestones</h3>
