--- a/app/assets/stylesheets/goals.scss
+++ b/app/assets/stylesheets/goals.scss
@@ -1,26 +1,105 @@
+.goal-container{
+    display: grid;
+    margin: 25px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 15px;
+}
 .goal-box{
+    display:inline-block;
+    position:relative;
+    box-shadow: 0 0 10px 1px #aeaeae;
     border-radius: 5px;
-    display: block;
-    padding: 8px;
-    margin: 15px;
+    padding: 1em;
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('https://wallpapercave.com/wp/PSEaLzy.jpg');
     background-position: 50%;
     -webkit-background-size: cover;
     -moz-background-size:  cover;
     -o-background-size: cover;
     background-size: cover;
-    position: relative;
     text-decoration: none;
+    &:hover{
+        box-shadow: 0 0 10px 3px #aeaeae;
+    }
+    a{
+        text-decoration:none;
+    }
     .goal-title{
-        font-family: Arial, Helvetica, sans-serif;
         color: #fff;
-        font-size: 3rem;
-        padding: 2rem;
+        font-size: 20px;
         line-height: 1em;
+        text-decoration: none;
     }
     .goal-due-date{
         color: rgb(223, 223, 223);
         font-size: 1.5rem;
-        padding: 2rem;
+        text-decoration: none;
+        position: absolute;
+        bottom: 5px;
+        left: 5px;
+    }
+    .favorited{
+        color: #fff;
+        font-size: 1.5rem;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+
+}
+#add-goal{
+    border-radius: 5px;
+    box-shadow: 0 0 5px 1px #aeaeae;
+    .goal-title{
+        padding-top: 30px;
+        padding-bottom: 35px;
+        color: #aeaeae;
+        text-align: center;
+    }
+    &:hover{
+        box-shadow: 0 0 5px 3px #aeaeae;
+    }
+    a{
+        text-decoration: none;
     }
 }
+    /* Custom, iPhone Retina */ 
+    @media only screen and (min-width : 320px) {
+        .goal-container{
+            grid-template-columns: repeat(1, 1fr);
+            margin: 15px;
+        }
+        .goal-title{
+            font-size: 20px;
+            padding-bottom: 25px;
+        }
+    }
+
+    /* Extra Small Devices, Phones */ 
+    @media only screen and (min-width : 480px) {
+        .goal-container{
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+
+    /* Small Devices, Tablets */
+    @media only screen and (min-width : 768px) {
+        .goal-container{
+            grid-template-columns: repeat(3, 1fr);
+        }
+    }
+
+    /* Medium Devices, Desktops */
+    @media only screen and (min-width : 992px) {
+        .goal-container{
+            grid-template-columns: repeat(4, 1fr);
+            margin: 25px;
+        }
+    }
+
+    /* Large Devices, Wide Screens */
+    @media only screen and (min-width : 1200px) {
+        .goal-container{
+            grid-template-columns: repeat(5, 1fr);
+            margin: 35px;
+        }
+    }
