--- a/app/assets/stylesheets/goals.scss
+++ b/app/assets/stylesheets/goals.scss
@@ -7,6 +7,8 @@
 .goal-box{
     display:inline-block;
     position:relative;
+    width: 100%;
+    height: 100%;
     box-shadow: 0 0 10px 1px #aeaeae;
     border-radius: 5px;
     padding: 1em;
@@ -33,40 +35,38 @@
         color: rgb(223, 223, 223);
         font-size: 1.5rem;
         text-decoration: none;
+        display: inline-block;
         position: absolute;
         bottom: 5px;
-        left: 5px;
-    }
-    .favorited{
-        color: #fff;
-        font-size: 1.5rem;
-        position: absolute;
-        bottom: 0;
-        right: 0;
-    }
-
-}
-#add-goal{
-    border-radius: 5px;
-    box-shadow: 0 0 5px 1px #aeaeae;
-    .goal-title{
-        padding-top: 30px;
-        padding-bottom: 35px;
-        color: #aeaeae;
-        text-align: center;
-    }
-    &:hover{
-        box-shadow: 0 0 5px 3px #aeaeae;
-    }
-    a{
-        text-decoration: none;
+        left: 15px;
     }
 }
+    #add-goal{
+        background: none;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        a:link, a:visited, a:hover, a:active{
+            text-decoration:none;
+        }
+        justify-content: center;
+        .goal-title{
+            color: #aeaeae;
+            top: 7px;
+            a:link, a:visited, a:hover, a:active{
+                text-decoration:none;
+            }
+        }
+    }
     /* Custom, iPhone Retina */ 
     @media only screen and (min-width : 320px) {
         .goal-container{
             grid-template-columns: repeat(1, 1fr);
             margin: 15px;
+        }
+        .goal-box{
+            height: 100px;
         }
         .goal-title{
             font-size: 20px;
@@ -78,6 +78,9 @@
     @media only screen and (min-width : 480px) {
         .goal-container{
             grid-template-columns: repeat(2, 1fr);
+        }
+        .goal-box{
+            height: 120px;
         }
     }
 
