--- a/app/views/goals/_goalbox.html.erb
+++ b/app/views/goals/_goalbox.html.erb
@@ -13,7 +13,7 @@
         <% end %>
     <%= link_to "goals/new" do %>
         <div class = "goal-box" id = "add-goal">
-            <div class = "goal-title glyphicon glyphicon-plus"></div>
+            <i class = "goal-title glyphicon glyphicon-plus"></i>
         </div>
     <% end %>
     </div>
