--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,9 +1,12 @@
-<h1><%= link_to(@goal.title, target: "_blank")%> <i class="glyphicon glyphicon-star-empty" style="font-size: 2.75rem;"></i> <br/></h1>
-
+<h1><%= link_to(@goal.title, target: "_blank")%></h1>
 <div class = "timeline-wrapper">
   <h3>Milestones</h3>
-
-  <ul>
+  <div>
     <%= render(partial: 'milestones/milestone', collection: @goal.milestones) %>
-  </ul>
+  </div>
+  <div id = "add-milestone">
+    <%= link_to new_goal_milestone_path(@goal) do %>
+    <i class = "glyphicon glyphicon-plus" ></i>
+    <% end %>
+  </div>
 </div>
