--- a/app/assets/stylesheets/milestones.scss
+++ b/app/assets/stylesheets/milestones.scss
@@ -30,6 +30,8 @@ $glyph-padding: 10px;
     }
 }
 #milestone {
+    position:sticky;
+    top: 0;
     border-radius: $border-radius;
     background-color: $milestone-color;
     margin: $side-margin;
