--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,8 @@
   <body>
     <%= render "layouts/navigation" %>
     <%= yield %>
+    <br>
+    <br>
+    <%= render "layouts/footer" %>
   </body>
 </html>
