--- a/app/views/milestones/_milestone.html.erb
+++ b/app/views/milestones/_milestone.html.erb
@@ -1,17 +1,35 @@
-<div id = "milestone">
-  <div class = "top">
-    <div class = "milestone-title"><%= milestone.title %></div>
-    <div class = "milestone-date"><small>Due by: <%= milestone.due_date %></small></div>
-  </div>
-  <div class = "bottom">
-    <%= link_to edit_goal_milestone_path(@goal, milestone) do %> 
-    <i class = "glyphicon glyphicon-pencil"></i>
-    <% end %>
-    <%= link_to goal_milestone_path(@goal, milestone),  :method => :delete, :confirm => "Are you sure?" do %>
-      <i class = "glyphicon glyphicon-remove"></i> 
-      <% end %> 
+<section class = "section">
+  <div class="box">
+    <div class="level">
+      <div class="level-left">
+        <div class="level-item">
+          <div class="container">
+            <h1 class = "title"><%= milestone.title %></h1><br>
+            <h2 class = "subtitle"><%= milestone.due_date %></h2>
+          </div>
+        </div>
+        <div class="level-item">
+        </div>
       </div>
-    </div>
-<ul>
-    <%= render partial: 'tasks/task', collection: milestone.tasks %>
-</ul>
+      <div class="level-right">
+        <div class="level-item">
+          <%= link_to edit_goal_milestone_path(@goal, milestone) do %>
+            <span class="icon">
+              <%= fa_icon "edit"%>
+            </span>
+          <% end %>
+        </div>
+        <div class="level-item">
+          <%= link_to goal_milestone_path(@goal, milestone), method: :delete, confirm: "Are You Sure?" do %>
+            <span class="icon">
+              <%= fa_icon "trash"%>
+            </span>
+          <% end %>
+        </div>
+      </div>
+  </div>
+  </div>
+</section>
+<section class = "section">
+  <%= render partial: 'tasks/task', collection: milestone.tasks %>
+</section>
