Milestone and Goal Forms now have bulma support

--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -2,10 +2,10 @@
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-        Edit Your Milestone
+        Edit Your Goal
       </h1>
       <h2 class="subtitle">
-        Make it special.
+        Make it unique.
       </h2>
     </div>
   </div>
