--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -7,6 +7,14 @@
             <h2 class="subtitle">
                 Where you plan a better life.
             </h2>
+            <div class="container">
+                <%= link_to new_goal_path do%>
+                    <span class = "icon">
+                    <%= fa_icon "plus-circle"%>
+                    </span>
+                    Add a Goal
+                <% end %>
+            </div>
         </div>
     </div>
 </section>
