--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,17 +1,15 @@
-<h1> New Goal </h1>
-<div class="row">
-    <div class="col-md-6 col-md-offset-3">
-        <%= form_for(@goal) do |f| %>
-            <%= f.label :title %>
-            <%= f.text_field :title %>
-            
-            <%= f.label :daily_action %>
-            <%= f.text_field :daily_action %>
-
-            <%= f.label :due_date %>
-            <%= f.date_field :due_date %>
-
-            <%= f.submit "Create Goal", class: "btn btn-primary"%>
-        <% end %>
+<section class="hero is-link is-bold">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        Set a New Goal
+      </h1>
+      <h2 class="subtitle">
+        Make it something special.
+      </h2>
     </div>
-</div>
+  </div>
+</section>
+<section class="section">
+    <%= render 'form'%>
+</section>
