Added full task suppport

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,13 @@ $section-padding: 1rem 0.75rem;
 $section-padding-medium: 4.5rem 0.75rem;
 $section-padding-large: 9rem 0.75rem;
 @import "bulma";
+
+
+/* Milestones Styling */
+#milestone {
+    padding-bottom: 0px;
+}
+
+#milestone-tasks {
+    padding-top: 0px;
+}
