--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -16,7 +16,7 @@
 
 
         <div class="field">
-            <%= f.submit "Submit", class: "button is-link"%>
+            <%= f.submit "Submit", class: "button is-danger"%>
             <%= link_to @goal do%>
                 <button class="button is-text">Cancel</button>
             <% end %>
