--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,10 +1,21 @@
-<div class = "container">
-    <div class = "box">
-        <div class = "field">
-            <label class = "label">New Task</label>
-            <div class = "control">
-                <input class="input" type="text" placeholder="Enter New Task Here...">
-            </div>
+<%= form_for [@milestone, @task] do |f|%>
+    <!-- Body -->
+    <div class= "field">
+        <%= f.label :body, class: "label"%>
+        <div class= "control">
+            <%= f.text_field :body, class: "input"%>
         </div>
     </div>
-</div>
+
+    <%= f.hidden_field :milestone_id, value: @milestone%>
+
+    <!-- Submit -->
+    <div class= "field">
+        <%= f.submit "Submit", class: "button is-success"%>
+        <%= link_to @milestone do %>
+            <button class= "button is-text">Cancel</button>
+        <% end %>
+    </div>
+
+
+<% end %>
